Get basic album info working with knockout. Add in Glimpse diagnostics (so cool!) Get delete album working
Next: Figure out how to get live album add/move working

--- a/DanceCalc/m4d/Views/Shared/_PurchaseLinks.cshtml
+++ b/DanceCalc/m4d/Views/Shared/_PurchaseLinks.cshtml
@@ -13,5 +13,5 @@
         image = link.Logo;
     }
 
-    <text><a href='@link.Link' @Html.Raw(target)><img src='@Url.Content("~/Content/" + image)' alt='@link.AltText' /></a></text>
+    <a href='@link.Link' @Html.Raw(target)><img src='@Url.Content("~/Content/" + image)' alt='@link.AltText' /></a>
 }
