--- a/DanceCalc/m4d/Views/Song/Create.cshtml
+++ b/DanceCalc/m4d/Views/Song/Create.cshtml
@@ -28,6 +28,7 @@
         var paramShowBPM = true;
         var paramEpsVisible = 0.1;
         var songId = "@Model.SongId.ToString()";
+        var albums = [];
     </script>
     @Scripts.Render("~/bundles/jqueryval")
     <script src="@Url.Content("~/Scripts/chosen.jquery.js")" type="text/javascript"></script>
