Get add album working for knockout editing

--- a/DanceCalc/m4d/Views/Song/EditCore.cshtml
+++ b/DanceCalc/m4d/Views/Song/EditCore.cshtml
@@ -262,6 +262,7 @@
     }
 *@
     </table>
+    <a class="btn btn-info" role="button" id="AddAlbum" data-bind="click: newAlbum">New Album</a>
     <hr />
     
     <h3>Music Services</h3>
