Use noUiSlider for custom slider on counter page.

--- a/DanceCalc/m4d/Views/Home/Counter.cshtml
+++ b/DanceCalc/m4d/Views/Home/Counter.cshtml
@@ -22,6 +22,11 @@
     }
     
     @Scripts.Render("~/bundles/jqueryval")
+    
+    <script src="~/Scripts/jquery.nouislider.full.min.js"></script>
     <script src="@Url.Content(pageScript)" type="text/javascript"></script>
+
+    <link href="~/Content/jquery.nouislider.css" rel="stylesheet" />
+    <link href="~/Content/jquery.nouislider.pips.css" rel="stylesheet" />
 }
 
