--- a/DanceCalc/m4d/Views/Song/Create.cshtml
+++ b/DanceCalc/m4d/Views/Song/Create.cshtml
@@ -32,12 +32,16 @@
     </script>
     @Scripts.Render("~/bundles/jqueryval")
     <script src="@Url.Content("~/Scripts/chosen.jquery.js")" type="text/javascript"></script>
-    <link href="@Url.Content("~/Content/chosen.css")" rel="stylesheet" type="text/css" />
     <script src="@Url.Content("~/Scripts/knockout-3.1.0.js")" type="text/javascript"></script>
     <script src="@Url.Content("~/Scripts/knockout.mapping-latest.js")" type="text/javascript"></script>
+    <script src="@Url.Content("~/Scripts/jquery.nouislider.full.min.js")" type="text/javascript"></script>
     <script>
         $(".chzn-select").chosen({ width: "500px" });
     </script>
     <script src="@Url.Content(pageScript)" type="text/javascript"></script>
     <script src="@Url.Content(counterScript)" type="text/javascript"></script>
+
+    <link href="@Url.Content("~/Content/chosen.css")" rel="stylesheet" type="text/css" />
+    <link href="~/Content/jquery.nouislider.css" rel="stylesheet" />
+    <link href="~/Content/jquery.nouislider.pips.css" rel="stylesheet" />
 }
